--- a/packages/sample-app/package.json
+++ b/packages/sample-app/package.json
@@ -10,11 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/css": "^11.13.0",
     "@patternfly/react-core": "^5.3.4",
+    "@patternfly/react-icons": "^5.3.2",
+    "@patternfly/react-table": "^5.3.4",
+    "@redhat-cloud-services/frontend-components": "^4.2.13",
+    "lodash": "^4.17.21",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-content-loader": "^6.2.0",
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4",
+    "@types/prop-types": "^15",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
